--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -4,6 +4,11 @@
     top: 50%;
     transform: translateY(-50%);
     
+    // TESTING
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    
     @include for-tablet-landscape-up {
         left: 50%;
         transform: translate(-50%,-50%);
@@ -15,7 +20,7 @@
     
     // Text on home screen
     &__text-box {
-        margin: 3rem 0rem 5rem 0rem;
+        margin: 3rem 0rem 3rem 0rem;
         text-align: center;
         
         @include for-tablet-landscape-up {
@@ -62,8 +67,8 @@
         
         @include for-phones-medium-down {
             margin: 3.5rem auto;
-            //width: 70%;
-            width: 0%;
+            width: 70%;
+            //width: 0%;
         }
         
         @include for-tablet-landscape-up {
